--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -27750,5 +27750,61 @@
         "published": "Wed, 24 Dec 2025 06:00:00 +0530",
         "source": "Tech-Economic Times",
         "summary": "While attention through the year was largely centred on marquee, bulge-bracket IPOs and billion-dollar secondaries involving large global funds, India-focused early-stage firms such as Kae Capital, 3one4 Capital, VenturEast, IndiaQuotient and AdvantEdge, among others, garnered significant returns in relative silence."
+    },
+    {
+        "id": "https://blog.ui.com/article/travel-in-style-unifi-style-unifi-travel-router",
+        "title": "Unifi Travel Router",
+        "link": "https://blog.ui.com/article/travel-in-style-unifi-style-unifi-travel-router",
+        "published": "Wed, 24 Dec 2025 00:30:18 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46371135\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/samsung-odyssey-3d-gaming-monitor-ces/",
+        "title": "Samsung's new 6K monitor can project in 3D without requiring glasses - but this model's more shocking",
+        "link": "https://www.zdnet.com/article/samsung-odyssey-3d-gaming-monitor-ces/",
+        "published": "Wed, 24 Dec 2025 02:09:00 GMT",
+        "source": "Latest news",
+        "summary": "Samsung has unveiled the world's first 6K, 3D gaming monitor ahead of CES 2026 - but will it be a worthwhile purchase?"
+    },
+    {
+        "id": "https://www.zdnet.com/article/nano-alternative-linux-macos-fresh-text-editor-with-gui/",
+        "title": "This fresh new text editor is the nano replacement I've been waiting for",
+        "link": "https://www.zdnet.com/article/nano-alternative-linux-macos-fresh-text-editor-with-gui/",
+        "published": "Wed, 24 Dec 2025 02:00:47 GMT",
+        "source": "Latest news",
+        "summary": "For Linux and MacOS, Fresh is the best of both worlds - a terminal text editor with GUI-like options. I'm all for it."
+    },
+    {
+        "id": "https://www.zdnet.com/article/samsung-galaxy-fold-wide-launch-2026/",
+        "title": "I've tried Samsung's $3,000 Galaxy TriFold, but this rumored alternative sounds more enticing",
+        "link": "https://www.zdnet.com/article/samsung-galaxy-fold-wide-launch-2026/",
+        "published": "Wed, 24 Dec 2025 01:58:00 GMT",
+        "source": "Latest news",
+        "summary": "A wide-screen Samsung Galaxy Fold phone would combine the pocketability of a Flip 7 and the versatility of a Fold 7."
+    },
+    {
+        "id": "https://www.zdnet.com/article/what-is-bluetooth-6-0/",
+        "title": "What is Bluetooth 6.0? Why the newest audio connectivity standard is such a big deal",
+        "link": "https://www.zdnet.com/article/what-is-bluetooth-6-0/",
+        "published": "Wed, 24 Dec 2025 01:57:00 GMT",
+        "source": "Latest news",
+        "summary": "The widespread adoption of Bluetooth 6 is progressing in audio products, with plenty of features to look forward to once the hardware catches up."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/newsletters/morning-dispatch/early-stage-investors-reap-gains-it-firms-self-funded-deals/articleshow/126150725.cms",
+        "title": "Seed-stage funds clock gains; IT firms' \u2018self-funded\u2019 deals",
+        "link": "https://economictimes.indiatimes.com/tech/newsletters/morning-dispatch/early-stage-investors-reap-gains-it-firms-self-funded-deals/articleshow/126150725.cms",
+        "published": "Wed, 24 Dec 2025 07:10:57 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Happy Wednesday! India-focused early-stage funds bagged significant returns in 2025. This and more in today's ETtech Morning Dispatch."
+    },
+    {
+        "id": "https://inc42.com/buzz/quick-commerce-in-2026-layoffs-at-yellow-ai-more/",
+        "title": "Quick Commerce In 2026, Layoffs At Yellow.ai & More",
+        "link": "https://inc42.com/buzz/quick-commerce-in-2026-layoffs-at-yellow-ai-more/",
+        "published": "Wed, 24 Dec 2025 02:30:55 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/FTR-Daily-Brief-60.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />What Lies Ahead For Quick Commerce?\u00a0 As 2025 draws to a close, India\u2019s quick commerce giants stand armed and ready.&#8230;"
     }
 ]
