--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -27806,5 +27806,29 @@
         "published": "Wed, 24 Dec 2025 02:30:55 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/FTR-Daily-Brief-60.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />What Lies Ahead For Quick Commerce?\u00a0 As 2025 draws to a close, India\u2019s quick commerce giants stand armed and ready.&#8230;"
+    },
+    {
+        "id": "https://www.theguardian.com/us-news/2025/dec/23/epstein-unredacted-files-social-media",
+        "title": "Some Epstein file redactions are being undone with hacks",
+        "link": "https://www.theguardian.com/us-news/2025/dec/23/epstein-unredacted-files-social-media",
+        "published": "Tue, 23 Dec 2025 20:10:30 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46368946\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/apple-to-allow-third-party-app-stores-in-brazil-to-settle-ios-case-with-regulator/articleshow/126152213.cms",
+        "title": "Apple to allow third-party app stores in Brazil to settle iOS case with regulator",
+        "link": "https://economictimes.indiatimes.com/tech/technology/apple-to-allow-third-party-app-stores-in-brazil-to-settle-ios-case-with-regulator/articleshow/126152213.cms",
+        "published": "Wed, 24 Dec 2025 09:05:32 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Apple has agreed to let rival app stores and alternative payments operate on iPhones in Brazil, settling a long-running antitrust case. The deal with regulator CADE follows complaints from MercadoLibre and comes with warnings from Apple about privacy and security risks. Apple must act within 105 days or face fines."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/us-bars-five-europeans-it-says-pressured-tech-firms-to-censor-american-viewpoints-online/articleshow/126151728.cms",
+        "title": "US bars five Europeans it says pressured tech firms to censor American viewpoints online",
+        "link": "https://economictimes.indiatimes.com/tech/technology/us-bars-five-europeans-it-says-pressured-tech-firms-to-censor-american-viewpoints-online/articleshow/126151728.cms",
+        "published": "Wed, 24 Dec 2025 08:29:57 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The US has barred five Europeans from entry, accusing them of pushing American tech companies to silence US opinions. The move uses visa rules to counter what Washington calls foreign censorship. European leaders argue their digital laws protect users and do not target the United States."
     }
 ]
