--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -27830,5 +27830,13 @@
         "published": "Wed, 24 Dec 2025 08:29:57 +0530",
         "source": "Tech-Economic Times",
         "summary": "The US has barred five Europeans from entry, accusing them of pushing American tech companies to silence US opinions. The move uses visa rules to counter what Washington calls foreign censorship. European leaders argue their digital laws protect users and do not target the United States."
+    },
+    {
+        "id": "https://yourstory.com/2025/12/stable-money-aims-to-triple-fixed-deposit-assets-by-2026",
+        "title": "Stable Money aims to triple fixed deposit assets to Rs 12,000 crore by 2026",
+        "link": "https://yourstory.com/2025/12/stable-money-aims-to-triple-fixed-deposit-assets-by-2026",
+        "published": "Wed, 24 Dec 2025 03:00:01 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "Saurabh Jain, the founder of fixed-income investment platform Stable Money, says FD, which was once considered a boring product, is now finding new life among young Indians seeking better returns with low risks\u2014in a new avatar."
     }
 ]
