📚 Auto-update: News data refreshed - 2025-12-24 06:18 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -27838,5 +27838,21 @@
         "published": "Wed, 24 Dec 2025 03:00:01 GMT",
         "source": "YourStory RSS Feed",
         "summary": "Saurabh Jain, the founder of fixed-income investment platform Stable Money, says FD, which was once considered a boring product, is now finding new life among young Indians seeking better returns with low risks\u2014in a new avatar."
+    },
+    {
+        "id": "https://www.wired.com/story/shark-promo-code/",
+        "title": "$100 Off Shark Promo Code | This Month",
+        "link": "https://www.wired.com/story/shark-promo-code/",
+        "published": "Wed, 24 Dec 2025 06:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Shark makes some seriously powerful vacuums, from handheld vacs to steam mops. Don\u2019t miss $100 off, 10% off, and more limited-time coupons from WIRED."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/waymo-to-update-software-after-san-francisco-power-outage-snarls-self-driving-vehicles/articleshow/126154058.cms",
+        "title": "Waymo to update software after San Francisco power outage snarls self-driving vehicles",
+        "link": "https://economictimes.indiatimes.com/tech/technology/waymo-to-update-software-after-san-francisco-power-outage-snarls-self-driving-vehicles/articleshow/126154058.cms",
+        "published": "Wed, 24 Dec 2025 11:24:32 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Waymo is updating its self-driving car software and emergency plans after its vehicles stalled in San Francisco due to a power outage. The outage affected traffic lights, causing congestion. Waymo vehicles are designed for dark signals but experienced delays. The company is refining protocols for its current scale."
     }
 ]
