📚 Auto-update: News data refreshed - 2025-12-24 07:16 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -27854,5 +27854,37 @@
         "published": "Wed, 24 Dec 2025 11:24:32 +0530",
         "source": "Tech-Economic Times",
         "summary": "Waymo is updating its self-driving car software and emergency plans after its vehicles stalled in San Francisco due to a power outage. The outage affected traffic lights, causing congestion. Waymo vehicles are designed for dark signals but experienced delays. The company is refining protocols for its current scale."
+    },
+    {
+        "id": "https://www.wired.com/story/paramount-plus-coupon-code/",
+        "title": "Paramount Plus Coupon Codes and Deals: 50% Off",
+        "link": "https://www.wired.com/story/paramount-plus-coupon-code/",
+        "published": "Wed, 24 Dec 2025 06:30:00 +0000",
+        "source": "WIRED",
+        "summary": "Save on streaming with the latest Paramount+ promo codes and deals, including 50% off subscriptions, free trials, and more."
+    },
+    {
+        "id": "https://www.wired.com/story/vitamix-promo-code/",
+        "title": "Vitamix Promo Codes and Deals: $25 Off + Free Shipping",
+        "link": "https://www.wired.com/story/vitamix-promo-code/",
+        "published": "Wed, 24 Dec 2025 06:20:00 +0000",
+        "source": "WIRED",
+        "summary": "Score discounts on blenders, food processors, immersion blenders, and more with our selection of Vitamix coupons and deals."
+    },
+    {
+        "id": "https://yourstory.com/2025/12/startup-news-and-updates-daily-roundup-december-23-2025",
+        "title": "Startup news and updates: Daily roundup (December 23, 2025)",
+        "link": "https://yourstory.com/2025/12/startup-news-and-updates-daily-roundup-december-23-2025",
+        "published": "Tue, 23 Dec 2025 10:27:26 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "YourStory presents the daily news roundup from the Indian startup ecosystem and beyond. Here's the roundup for Tuesday, December 23, 2025."
+    },
+    {
+        "id": "https://www.medianama.com/2025/12/223-youtube-exit-from-billboard-explained/",
+        "title": "Explained: Why YouTube\u2019s Exit From Billboard May Undermine Popular\u2011Music Chart\u2019s Credibility",
+        "link": "https://www.medianama.com/2025/12/223-youtube-exit-from-billboard-explained/",
+        "published": "Wed, 24 Dec 2025 07:10:10 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>YouTube is removing its streaming data from Billboard charts after the latter revised its methodology to prioritise paid streams. The move could reshape how music popularity is measured globally.</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-youtube-exit-from-billboard-explained/\">Explained: Why YouTube\u2019s Exit From Billboard May Undermine Popular\u2011Music Chart&#8217;s Credibility</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
     }
 ]
