📚 Auto-update: News data refreshed - 2025-12-24 08:16 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -27886,5 +27886,37 @@
         "published": "Wed, 24 Dec 2025 07:10:10 +0000",
         "source": "MEDIANAMA",
         "summary": "<p>YouTube is removing its streaming data from Billboard charts after the latter revised its methodology to prioritise paid streams. The move could reshape how music popularity is measured globally.</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-youtube-exit-from-billboard-explained/\">Explained: Why YouTube\u2019s Exit From Billboard May Undermine Popular\u2011Music Chart&#8217;s Credibility</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://www.theverge.com/entertainment/848379/pluribus-review-season-1-finale",
+        "title": "The Pluribus finale showed there&#8217;s a lot more to the story",
+        "link": "https://www.theverge.com/entertainment/848379/pluribus-review-season-1-finale",
+        "published": "2025-12-24T03:00:00-05:00",
+        "source": "The Verge",
+        "summary": "It's a good thing that we already know a second season of Pluribus is on the way. Because the season finale for the show - a sci-fi drama on Apple TV, helmed by Breaking Bad creator Vince Gilligan - made it clear that things are just getting started. The episode brought together a number of [&#8230;]"
+    },
+    {
+        "id": "https://www.zdnet.com/article/cachyos-vs-nobara-which-is-right-for-you/",
+        "title": "CachyOS vs Nobara: Which is right for you?",
+        "link": "https://www.zdnet.com/article/cachyos-vs-nobara-which-is-right-for-you/",
+        "published": "Wed, 24 Dec 2025 08:01:06 GMT",
+        "source": "Latest news",
+        "summary": "Sometimes, a somewhat obscure Linux distribution might be just what you're looking for. Is either CachyOS or Nobara the one?"
+    },
+    {
+        "id": "https://www.zdnet.com/article/how-to-prepare-upcoming-great-software-pricing-shakeout/",
+        "title": "The great software pricing shakeout of 2026: What every IT leader needs to know",
+        "link": "https://www.zdnet.com/article/how-to-prepare-upcoming-great-software-pricing-shakeout/",
+        "published": "Wed, 24 Dec 2025 08:00:48 GMT",
+        "source": "Latest news",
+        "summary": "Upcoming software purchases should no longer be one-time contracts; they're living partnerships built on shared data and trust."
+    },
+    {
+        "id": "https://inc42.com/buzz/samsung-seeks-pli-extension-for-smartphones-eyes-india-as-production-hub/",
+        "title": "Samsung Seeks PLI Extension For Smartphones, Eyes India As Production Hub",
+        "link": "https://inc42.com/buzz/samsung-seeks-pli-extension-for-smartphones-eyes-india-as-production-hub/",
+        "published": "Wed, 24 Dec 2025 07:37:52 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Samsung Seeks PLI Extension For Smartphones, Eyes India As Production Hub\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/samsung-protests-featured.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Tech giant Samsung has applied for the product-linked incentive (PLI) scheme for mobile components and is also seeking extension of&#8230;"
     }
 ]
