--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -27918,5 +27918,61 @@
         "published": "Wed, 24 Dec 2025 07:37:52 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"Samsung Seeks PLI Extension For Smartphones, Eyes India As Production Hub\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/samsung-protests-featured.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Tech giant Samsung has applied for the product-linked incentive (PLI) scheme for mobile components and is also seeking extension of&#8230;"
+    },
+    {
+        "id": "https://yourstory.com/2025/12/knotty-building-indias-premium-sneaker-accessories-market",
+        "title": "Not another sneaker drop: Knotty is building India\u2019s premium sneaker accessories market",
+        "link": "https://yourstory.com/2025/12/knotty-building-indias-premium-sneaker-accessories-market",
+        "published": "Wed, 24 Dec 2025 08:53:48 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "Not another sneaker drop: Knotty is building India\u2019s premium sneaker accessories market\n\nGurugram-based Knotty is addressing a gap in India's fast-growing sneaker market by offering high-quality accessories that let people personalise their footwear.\n\nGayatri Guha\n\nIn India's fast-growing sneaker c"
+    },
+    {
+        "id": "https://yourstory.com/2025/12/hyderabad-student-startup-apollyon-dynamics-defence-tech-kamikaze-drones",
+        "title": "This student-led startup is revolutionising defence tech with agile kamikaze drones",
+        "link": "https://yourstory.com/2025/12/hyderabad-student-startup-apollyon-dynamics-defence-tech-kamikaze-drones",
+        "published": "Wed, 24 Dec 2025 08:17:20 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "Hyderabad-based Apollyon Dynamics, built by BITS Hyderabad students, is building high-speed kamikaze drones, already in use by India\u2019s Border Security Force."
+    },
+    {
+        "id": "https://yourstory.com/2025/12/the-best-and-worst-performing-startup-stocks-of-2025-taking-madhubani-art-to-the-world",
+        "title": "The best and worst performing startup stocks of 2025; Taking Madhubani art to the world",
+        "link": "https://yourstory.com/2025/12/the-best-and-worst-performing-startup-stocks-of-2025-taking-madhubani-art-to-the-world",
+        "published": "Wed, 24 Dec 2025 02:00:00 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "India\u2019s startup stocks in 2025 told a clear story: hype no longer pays. Asha Jha runs Madhubani Paints along with her daughters, working to preserve and promote the traditional art form. Target in India is leveraging technology platforms to deliver new shopping experiences."
+    },
+    {
+        "id": "https://inc42.com/buzz/groww-shares-zoom-10-on-entry-in-bse-largecap-index/",
+        "title": "Groww Shares Zoom 10% On Entry In BSE LargeCap Index",
+        "link": "https://inc42.com/buzz/groww-shares-zoom-10-on-entry-in-bse-largecap-index/",
+        "published": "Wed, 24 Dec 2025 09:01:24 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Groww Shares Zoom 10% On Entry In BSE LargeCap Index\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/11/groww-FY24-featured.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Shares of stock broking platform Groww surged almost 10% to INR 175.60 during intraday trading today. The stock rally came&#8230;"
+    },
+    {
+        "id": "https://inc42.com/buzz/rapido-app-faces-nationwide-outage/",
+        "title": "Rapido App Faces Nationwide Outage",
+        "link": "https://inc42.com/buzz/rapido-app-faces-nationwide-outage/",
+        "published": "Wed, 24 Dec 2025 08:43:40 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"TVS To Sell Rapido Stake Worth INR 288 Cr To Prosus &amp; Accel\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/11/rapido-TVS-featured.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Ride-hailing platform Rapido is facing a service outage, with users across multiple cities reporting log in failures and ride disruptions.&#8230;"
+    },
+    {
+        "id": "https://www.medianama.com/2025/12/223-assam-internet-shutdown-karbi-anglong-violence/",
+        "title": "Assam Imposes Internet Shutdown In Two Districts After Violence Erupts Over \u2018Outsiders\u2019 Occupying Govt Land",
+        "link": "https://www.medianama.com/2025/12/223-assam-internet-shutdown-karbi-anglong-violence/",
+        "published": "Wed, 24 Dec 2025 08:45:41 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>Assam has suspended mobile internet services in West Karbi Anglong and Karbi Anglong after violence claimed two lives. The state cited serious law and order concerns.</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-assam-internet-shutdown-karbi-anglong-violence/\">Assam Imposes Internet Shutdown In Two Districts After Violence Erupts Over &#8216;Outsiders&#8217; Occupying Govt Land</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://www.medianama.com/2025/12/223-explained-prompt-injections-ai-browsers-chatgpt-atlas/",
+        "title": "Explained: How Prompt Injections Put AI Browsers Like ChatGPT Atlas At Risk",
+        "link": "https://www.medianama.com/2025/12/223-explained-prompt-injections-ai-browsers-chatgpt-atlas/",
+        "published": "Wed, 24 Dec 2025 08:42:35 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>Learn how prompt injection attacks can put AI-powered browsers like ChatGPT Atlas at risk. And what exactly OpenAI says about dealing with them.</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-explained-prompt-injections-ai-browsers-chatgpt-atlas/\">Explained: How Prompt Injections Put AI Browsers Like ChatGPT Atlas At Risk</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
     }
 ]
