📚 Auto-update: News data refreshed - 2025-12-24 10:13 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -27974,5 +27974,37 @@
         "published": "Wed, 24 Dec 2025 08:42:35 +0000",
         "source": "MEDIANAMA",
         "summary": "<p>Learn how prompt injection attacks can put AI-powered browsers like ChatGPT Atlas at risk. And what exactly OpenAI says about dealing with them.</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-explained-prompt-injections-ai-browsers-chatgpt-atlas/\">Explained: How Prompt Injections Put AI Browsers Like ChatGPT Atlas At Risk</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://www.wired.com/story/alphafold-changed-science-after-5-years-its-still-evolving/",
+        "title": "AlphaFold Changed Science. After 5 Years, It\u2019s Still Evolving",
+        "link": "https://www.wired.com/story/alphafold-changed-science-after-5-years-its-still-evolving/",
+        "published": "Wed, 24 Dec 2025 10:00:00 +0000",
+        "source": "WIRED",
+        "summary": "WIRED spoke with DeepMind\u2019s Pushmeet Kohli about the recent past\u2014and promising future\u2014of the Nobel Prize-winning research project that changed biology and chemistry forever."
+    },
+    {
+        "id": "https://www.engadget.com/entertainment/streaming/best-streaming-services-154527042.html?src=rss",
+        "title": "The best streaming services in 2026",
+        "link": "https://www.engadget.com/entertainment/streaming/best-streaming-services-154527042.html?src=rss",
+        "published": "Wed, 24 Dec 2025 10:00:36 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>With so many streaming platforms out there, it is easy to feel like you are constantly sorting through menus instead of watching something you enjoy. Every service has its own vibe, whether it is big cinematic releases, long documentary deep dives or shows you put on in the background while you unwind. Some people even swap cable for <a href=\"https://www.engadget.com/entertainment/streaming/best-live-tv-streaming-service-133000410.html\">live TV streaming</a>.<br /><br />Here, we are looking a"
+    },
+    {
+        "id": "https://github.com/tonbo-io/tonbo",
+        "title": "Show HN: Tonbo \u2013 an embedded database for serverless and edge runtimes",
+        "link": "https://github.com/tonbo-io/tonbo",
+        "published": "Wed, 17 Dec 2025 18:41:40 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46303638\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/linux-distros-no-loger-exist/",
+        "title": "My 5 favorite distros of Linux past - and why I'm still thinking about them",
+        "link": "https://www.zdnet.com/article/linux-distros-no-loger-exist/",
+        "published": "Wed, 24 Dec 2025 10:01:11 GMT",
+        "source": "Latest news",
+        "summary": "Linux's history is littered with distributions that came and went, many of which are long forgotten. There are some, however, that I actually miss, and these are they."
     }
 ]
